--- a/meta.yaml
+++ b/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - python
   run:
     - avro >=1.11.2
-    - stomp.py >=8.1.0
+    - proton >=0.9.1
 
 about:
   home: http://openzdm.eu
